# foundry-hosted-langchain-demos

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  azure.yaml  main.py  pyproject.toml  stage0_local_agent.py  stage2_foundry_iq.py  stage2_foundry_iq_retrieve.py  stage2_foundry_iq_workaround.py  stage3_foundry_toolbox.py  todo.md
agents/: .dockerignore  Dockerfile  agent.yaml  call_deployed_agent.py  call_foundry_hosted.py  main.py  pyproject.toml  stage0_local_model.py  stage1_foundry_model.py  stage2_foundry_iq.py  stage3_foundry_toolbox.py  stage4_foundry_hosted.py
infra/: create-search-indexes.py  create-toolbox.py  main.bicep  main.parameters.json
infra/core/ai/: ai-project.bicep
infra/core/search/: azure_ai_search.bicep
infra/hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  write_dot_env.ps1  write_dot_env.sh
workflows/: .dockerignore  Dockerfile  agent.yaml  main.py  pyproject.toml  simple_workflow.py  stage1_foundry_model.py  stage1_simple_nodes.py  stage2_agent_nodes.py  stage3_as_agent.py  stage3_foundry_hosted_as_agent.py  stage4_foundry_hosted_as_agent.py  workflow_as_agent.py
workflows/_vendor/langchain_azure_ai_runtime/: _responses_host.py
