[project]
name = "foundry-hosted-langchain-demos"
version = "0.1.0"
description = "LangGraph-first hosted agent demos for Microsoft Foundry – local dev & infra scripts"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=11.6.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-azure-ai>=1.2.3",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "websockets>=16.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["vendor", "agents/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
