[project]
name = "foundry-hosted-langchain-agents"
version = "0.1.0"
description = "LangGraph-first hosted agent for Microsoft Foundry"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "azure-ai-agentserver-langgraph==1.0.0b17",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.4",
    "azure-search-documents>=11.6.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-mcp-adapters==0.1.11",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
    "websockets>=12.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
