[project]
name = "foundry-hosted-langchain-agents"
version = "0.1.0"
description = "LangGraph-first hosted agent for Microsoft Foundry"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-agentserver-responses==1.0.0b4",
    "azure-ai-agentserver-core==2.0.0b2",
    "azure-identity>=1.25.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.8",
    "mcp>=1.9.4",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
]

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
